[package]
name = "kvs"
version = "0.1.0"
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
failure = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"