[package]
name = "kvs"
version = "0.1.0"
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
failure = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
stderrlog = "0.5.4"
sled = "0.34.7"

[[bench]]
name = "benches"
harness = false